--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td><img
 height="250"
 width="250"
-          src="C:\Users\jlhor\OneDrive\Documents\Website Development\Web Development\HTML- APBA Team\Images\Pend Oreille Wampus Cats.jpg" alt=""></td>
+          src="Pend Oreille Wampus Cats.jpg" alt=""></td>
           <td><h3>Home of the</h3></td>
           <td><h1>PEND OREILLE WAMPUS CATS</h1></td>
       </tr>
