--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td><img
 height="250"
 width="250"
-          src="https://github.com/jlhorton77/TRABL-POWC/blob/main/Pend%20Oreille%20Wampus%20Cats.jpg" alt=""></td>
+          src="Pend%20Oreille%20Wampus%20Cats.jpg" alt=""></td>
           <td><h3>Home of the</h3></td>
           <td><h1>PEND OREILLE WAMPUS CATS</h1></td>
       </tr>
