--- a/2022teambattingstats.html
+++ b/2022teambattingstats.html
@@ -12,7 +12,7 @@
         <td><img src="Pend%20Oreille%20Wampus%20Cats.jpg" alt="" height="75" width="75"></td>
         <td><a href="index.html"> <h3>Main Page</h3></a></td>
         <td><a href="2022teambattingstats.html"><h3>2022 Team Batting Stats</h3></a></td>
-        <td><a href="2022teampitchingstats.html"><h3>2022 Team Pitching Stats</h3></a></td>
+        <td><a href="https://github.com/jlhorton77/TRABL-POWC/blob/main/2022teampitchingstats.html"><h3>2022 Team Pitching Stats</h3></a></td>
         <td><a href="2023teamstats.html"><h3>2023 Team Stats</h3></a></td>
         <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a>
         </td>
