--- a/2022teambattingstats.html
+++ b/2022teambattingstats.html
@@ -13,7 +13,7 @@
         <td><a href="index.html"> <h3>Main Page</h3></a></td>
         <td><a href="2022teambattingstats.html"><h3>2022 Team Batting Stats</h3></a></td>
         <td><a href="2022teampitchingstats.html"><h3>2022 Team Pitching Stats</h3></a></td>
-        <td><a href="2023teamstats.html"><h3>2023 Team Stats</h3></a></td>
+        <td><a href="https://github.com/jlhorton77/TRABL-POWC/blob/main/2023teamstats.html"><h3>2023 Team Stats</h3></a></td>
         <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a>
         </td>
             </tr>
