--- a/2022teampitchingstats.html
+++ b/2022teampitchingstats.html
@@ -7,17 +7,17 @@
   <body>
 
 
-        <table>
-          <tr>
-            <td><img src="C:\Users\jlhor\OneDrive\Documents\Website Development\Web Development\HTML- APBA Team\Images\Pend Oreille Wampus Cats.jpg" alt="" height="75" width="75"></td>
-            <td><a href="C:\Users\jlhor\OneDrive\Documents\Website Development\Web Development\HTML- APBA Team\index.html"> <h3>Main Page</h3></a></td>
-            <td><a href="C:\Users\jlhor\OneDrive\Documents\Website Development\Web Development\HTML- APBA Team\2022teambattingstats.html"><h3>2022 Team Batting Stats</h3></a></td>
-            <td><a href="C:\Users\jlhor\OneDrive\Documents\Website Development\Web Development\HTML- APBA Team\2022teampitchingstats.html"><h3>2022 Team Pitching Stats</h3></a></td>
-            <td><a href="C:\Users\jlhor\OneDrive\Documents\Website Development\Web Development\HTML- APBA Team\2023teamstats.html"><h3>2023 Team Stats</h3></a></td>
-            <td><a href="C:\Users\jlhor\OneDrive\Documents\Website Development\Web Development\HTML- APBA Team\TeamTransactions.html"><h3>Team Transactions</h3></a>
-            </td>
-                </tr>
-        </table>
+      <table>
+      <tr>
+        <td><img src="Pend%20Oreille%20Wampus%20Cats.jpg" alt="" height="75" width="75"></td>
+        <td><a href="index.html"> <h3>Main Page</h3></a></td>
+        <td><a href="2022teambattingstats.html"><h3>2022 Team Batting Stats</h3></a></td>
+        <td><a href="2022teampitchingstats.html"><h3>2022 Team Pitching Stats</h3></a></td>
+        <td><a href="2023teamstats.html"><h3>2023 Team Stats</h3></a></td>
+        <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a>
+        </td>
+            </tr>
+    </table>
     <br>
     <br>
         <h1><center> 2022 Team Pitching Stats </center></h1>
