--- a/2022teambattingstats.html
+++ b/2022teambattingstats.html
@@ -9,12 +9,12 @@
 
     <table>
       <tr>
-        <td><img src="Pend%20Oreille%20Wampus%20Cats.jpg" alt="" height="75" width="75"></td>
-        <td><a href="index.html"> <h3>Main Page</h3></a></td>
-        <td><a href="2022teambattingstats.html"><h3>2022 Team Batting Stats</h3></a></td>
-        <td><a href="2022teampitchingstats.html"><h3>2022 Team Pitching Stats</h3></a></td>
-        <td><a href="2023teamstats.html"><h3>2023 Team Stats</h3></a></td>
-        <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a>
+        <td><img src="/main/Pend%20Oreille%20Wampus%20Cats.jpg" alt="" height="75" width="75"></td>
+        <td><a href="/main/index.html"> <h3>Main Page</h3></a></td>
+        <td><a href="/main/2022teambattingstats.html"><h3>2022 Team Batting Stats</h3></a></td>
+        <td><a href="/main/2022teampitchingstats.html"><h3>2022 Team Pitching Stats</h3></a></td>
+        <td><a href="/main/2023teamstats.html"><h3>2023 Team Stats</h3></a></td>
+        <td><a href="/main/TeamTransactions.html"><h3>Team Transactions</h3></a>
         </td>
             </tr>
     </table>
