--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td><img
 height="250"
 width="250"
-          src="Pend%20Oreille%20Wampus%20Cats.jpg" alt=""></td>
+          src="/main/Pend%20Oreille%20Wampus%20Cats.jpg" alt=""></td>
           <td><h3>Home of the</h3></td>
           <td><h1>PEND OREILLE WAMPUS CATS</h1></td>
       </tr>
@@ -21,13 +21,13 @@ width="250"
 </center></em></h5>
 <br>
 <hr>
-<a href="2022teambattingstats.html"> <h2>2022 Player Batting Stats</h2> </a>
+<a href="/main/2022teambattingstats.html"> <h2>2022 Player Batting Stats</h2> </a>
 <br>
-<a href="2022teampitchingstats.html"> <h2>2022 Player Pitching Stats</h2> </a>
+<a href="/main/2022teampitchingstats.html"> <h2>2022 Player Pitching Stats</h2> </a>
 <br>
-<a href="2023teamstats.html"> <h2>2023 Player Stats</h2> </a>
+<a href="/main/2023teamstats.html"> <h2>2023 Player Stats</h2> </a>
 <br>
-<a href="TeamTransactions.html"><h2>Team Transactions</h2> </a>
+<a href="/main/TeamTransactions.html"><h2>Team Transactions</h2> </a>
 
 
 
