--- a/2022teambattingstats.html
+++ b/2022teambattingstats.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>2022 Team Batting Stats</title>
   </head>
-  <body>
+  <body style=backgroundcolor: #FFFBE9;">
 
 
     <table>
