--- a/2023teamstats.html
+++ b/2023teamstats.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>2023 Team Stats</title>
   </head>
-  <body>
+<body style=backgroundcolor: #FFFBE9;">
 
     <table>
       <tr>
