--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -6,7 +6,7 @@
   <title>Team Transactions</title>
 </head>
 
-<body>
+<body style=backgroundcolor: #FFFBE9;">
   <table>
     <tr>
       <td><img src="Pend Oreille Wampus Cats.jpg" alt="" height="75" width="75"></td>
