--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -33,7 +33,7 @@
                                          
      <tr>
       <td><em>1/24/2023</em></td>
-      <td>The <u>Pend Oreille Wampus Cats</u> cut <strong>P Brett Anderson, P Wade LeBlanc, P Richard Rodriguez, P Sam Clay, P Craig Stammen, P Adonis Medina, P Luke Jackson, P John Curtiss, OF Nick Martini, OF Josh Reddick, 2B Jose Peraza, OF Ka'ai Tom, 3B Phil Gosselin, C Cam Gallagher</strong> and <strong>SS Lucius Fox</strong>.</td>
+      <td>The <u>Pend Oreille Wampus Cats</u> cut <strong>P Brett Anderson, P Wade LeBlanc, P Richard Rodriguez, P Sam Clay, P Craig Stammen, P Adonis Medina, P Luke Jackson, P John Curtiss, P Yerry Rodriguez, OF Nick Martini, OF Josh Reddick, 2B Jose Peraza, OF Ka'ai Tom, 3B Phil Gosselin, C Cam Gallagher</strong> and <strong>SS Lucius Fox</strong>.</td>
     </tr>                                     
                                          
     <tr>
