--- a/2022teambattingstats.html
+++ b/2022teambattingstats.html
@@ -1191,56 +1191,55 @@
 </tr>
 </table>
 
-<h3><strong>Yermin Mercedes</strong></h3>
+<h3><strong>Skye Bolt</strong></h3>
 
 <table>
 <tr>
-  <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/2/295c29d9_mlbam.jpg" alt=""></td>
+  <td><img src="https://www.baseball-reference.com/req/202301040/images/headshots/f/f6d9bced_mlbam.jpg" alt=""></td>
   <td>
 
 
-    <div class="sr_share_wrap" style="overflow:auto">
-    <table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
-        <caption>Standard Batting</caption>
-       <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
-       <thead>
-          <tr>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">PA</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">AB</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">2B</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">3B</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">RBI</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SB</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CS</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
-             <th scope="col" data-filter="1" data-name="Batting Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BA</th>
-             <th scope="col" data-filter="1" data-name="On-Base%" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OBP</th>
-             <th scope="col" data-filter="1" data-name="Slugging %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SLG</th>
-             <th scope="col" data-filter="1" data-name="On-Base Plus Slugging" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS+</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">TB</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GDP</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SH</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SF</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
-             <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Pos</th>
-          </tr>
-          </thead>
-    <tbody>
-    <tr><th scope="row" csk="2022" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2022</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">29</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/SFG/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="San Francisco Giants">SFG</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/NL/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">NL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">31</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">83</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">73</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">9</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">17</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">5</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">9</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">17</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.233</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.325</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.342</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.668</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">90</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">25</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">D/H732</td></tr>
-    </tbody><tfoot>
-       </tfoot>
-    </table><div id="credit_batting_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/m/merceye01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#batting_standard">View Original Table</a><br>Generated 12/20/2022.</div>
+  <div class="sr_share_wrap" style="overflow:auto">
+<table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
+    <caption>Standard Batting</caption>
+   <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
+   <thead>
+      <tr>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">PA</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">AB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">2B</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">3B</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">RBI</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CS</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
+         <th scope="col" data-filter="1" data-name="Batting Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BA</th>
+         <th scope="col" data-filter="1" data-name="On-Base%" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OBP</th>
+         <th scope="col" data-filter="1" data-name="Slugging %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SLG</th>
+         <th scope="col" data-filter="1" data-name="On-Base Plus Slugging" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS+</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">TB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GDP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SH</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SF</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
+      </tr>
+      </thead>
+<tbody>
+<tr><th scope="row" csk="2022" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2022</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">28</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/OAK/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="Oakland Athletics">OAK</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/AL/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">AL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">42</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">116</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">106</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">10</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">21</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">13</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">5</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">30</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.198</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.259</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.330</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.589</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">71</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">35</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td></tr>
+</tbody><tfoot>
+   </tfoot>
+</table><div id="credit_batting_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/b/boltsk01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#batting_standard">View Original Table</a><br>Generated 2/2/2023.</div>
 
 </td>
 </tr>
