--- a/2022teampitchingstats.html
+++ b/2022teampitchingstats.html
@@ -594,7 +594,7 @@
     <h2><strong><center>Relief Pitchers</center></strong></h2>
     <hr>
 
-    <h3><strong>Adam Ottovino</strong></h3>
+    <h3><strong>Adam Ottavino</strong></h3>
 
 
     <table>
