--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -44,7 +44,7 @@
 
     <tr>
       <td><em>12/06/2022</em></td>
-      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>Corey Dicerson</strong> to the <u>Little Compton Little Giants</u> in exchange for the <strong> 2023 9th & 11th round draft picks.</strong></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>Corey Dickerson</strong> to the <u>Little Compton Little Giants</u> in exchange for the <strong> 2023 9th & 11th round draft picks.</strong></td>
     </tr>
 
     <tr>
