--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -25,7 +25,12 @@
   <hr>
   <table>
 
-                                         
+   <tr>
+      <td><em>6/2/2023</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>OF Hunter Renfroe</strong>, <strong>C Garrett Stubbs</strong> and <strong>P Wily Peralta</strong> to the <u>Tampa Bay Pipers</u> in exchange for <strong>P Bryce Elder </strong>, <strong>C Joey Bart</strong>, and
+        <strong>OF Ben Gamel</strong>. </td>
+    </tr>                                      
+                                                                               
    <tr>
       <td><em>2/2/2023</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> add <strong>OF Skye Bolt,</strong> and <strong> P Jackson Kowar </strong> and released <strong>OF Yermin Mercedes </strong> and <strong> P Max Kranick </strong> in Phase III of the TRABL Draft. </td>
