--- a/2022teampitchingstats.html
+++ b/2022teampitchingstats.html
@@ -91,6 +91,68 @@
     </table>
     <br>
 
+<h3><strong>Bryce Elder</strong></h3>
+
+<table>
+<tr>
+  <td><img src="https://www.baseball-reference.com/req/202305180/images/headshots/6/6622f351_mlbam.jpg" alt=""></td>
+  <td>
+
+   <div class="sr_share_wrap" style="overflow:auto">
+<table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
+    <caption>Standard Pitching</caption>
+   <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
+   <thead>
+      <tr>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">L</th>
+         <th scope="col" data-filter="1" data-name="Win-Loss %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W-L%</th>
+         <th scope="col" data-filter="1" data-name="Earned Run Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GS</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GF</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CG</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SHO</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SV</th>
+         <th scope="col" data-filter="1" data-name="Innings Pitched" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ER</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BK</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BF</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA+</th>
+         <th scope="col" data-filter="1" data-name="Fielding Independent Pitching" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">FIP</th>
+         <th scope="col" data-filter="1" data-name="Walks &amp; Hits per IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WHIP</th>
+         <th scope="col" data-filter="1" data-name="Hits per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H9</th>
+         <th scope="col" data-filter="1" data-name="Home Runs per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR9</th>
+         <th scope="col" data-filter="1" data-name="Bases On Balls per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB9</th>
+         <th scope="col" data-filter="1" data-name="Strikeouts per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO9</th>
+         <th scope="col" data-filter="1" data-name="Strikeouts / Base On Balls" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO/W</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Awards</th>
+      </tr>
+      </thead>
+<tbody>
+<tr><th scope="row" csk="2022" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2022</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">23</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/ATL/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="Atlanta Braves">ATL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/NL/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">NL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.333</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3.17</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">10</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">9</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><strong><em>1</em></strong></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">54.0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">44</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">19</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">19</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">23</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">47</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">227</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">131</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3.78</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.241</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7.3</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0.7</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3.8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7.8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.04</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "></td></tr>
+</tbody><tfoot>
+   </tfoot>
+</table><div id="credit_pitching_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/e/elderbr01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#pitching_standard">View Original Table</a><br>Generated 6/2/2023.</div>
+
+</td>
+</tr>
+</table>
+<br>
+
+
     <h3><strong>Cole Irvin</strong></h3>
 
     <table>
@@ -1143,65 +1205,6 @@
 </table>
 <br>
 
-<h3><strong>Wily Peralta</strong></h3>
-
-<table>
-<tr>
-  <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/4/47033146_mlbam.jpg" alt=""></td>
-  <td>
-
-    <div class="sr_share_wrap" style="overflow:auto">
-  <table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
-      <caption>Standard Pitching</caption>
-     <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
-     <thead>
-        <tr>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">L</th>
-           <th scope="col" data-filter="1" data-name="Win-Loss %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W-L%</th>
-           <th scope="col" data-filter="1" data-name="Earned Run Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GS</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GF</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CG</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SHO</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SV</th>
-           <th scope="col" data-filter="1" data-name="Innings Pitched" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IP</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ER</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BK</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WP</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BF</th>
-           <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA+</th>
-           <th scope="col" data-filter="1" data-name="Fielding Independent Pitching" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">FIP</th>
-           <th scope="col" data-filter="1" data-name="Walks &amp; Hits per IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WHIP</th>
-           <th scope="col" data-filter="1" data-name="Hits per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H9</th>
-           <th scope="col" data-filter="1" data-name="Home Runs per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR9</th>
-           <th scope="col" data-filter="1" data-name="Bases On Balls per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB9</th>
-           <th scope="col" data-filter="1" data-name="Strikeouts per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO9</th>
-           <th scope="col" data-filter="1" data-name="Strikeouts / Base On Balls" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO/W</th>
-        </tr>
-        </thead>
-  <tbody>
-  <tr><th scope="row" csk="2022" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2022</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">33</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/DET/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="Detroit Tigers">DET</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/AL/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">AL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.000</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.58</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">28</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">38.1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">34</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">12</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">11</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">24</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">32</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">168</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">147</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4.08</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.513</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">8.0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0.5</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">5.6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7.5</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.33</td></tr>
-  </tbody><tfoot>
-     </tfoot>
-  </table><div id="credit_pitching_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/p/peralwi01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#pitching_standard">View Original Table</a><br>Generated 12/20/2022.</div>
-
-</td>
-</tr>
-</table>
-<br>
 
 
 <h3><strong>John King</strong></h3>
