--- a/2023teamstats.html
+++ b/2023teamstats.html
@@ -22,12 +22,517 @@
 
 
     <h1><strong><center>
-      2023 Team stats will be available at the start of the 2023 MLB season!
+      2023 TRABL League Stats-- Pend Oreille Wampus Cats
     </center></strong></h1>
 
     <h1><strong><center>
       Go Cats!
     </center></strong></h1>
+                                           
+                                           <h1><strong> STANDINGS </strong> </h1>
+<BODY>
+<TABLE CELLSPACING=2 CELLPADDING=2>
+<TR>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=RIGHT>W</TD>
+<TD ALIGN=RIGHT>L</TD>
+<TD ALIGN=RIGHT>PCT</TD>
+<TD ALIGN=RIGHT>GB</TD>
+<TD ALIGN=RIGHT>STRK</TD>
+<TD ALIGN=RIGHT>Last 10</TD>
+<TD ALIGN=RIGHT>Home</TD>
+<TD ALIGN=RIGHT>Away</TD>
+<TD ALIGN=RIGHT>1 Run</TD>
+<TD ALIGN=RIGHT>X-Inn</TD>
+<TD ALIGN=RIGHT>RCL EAST</TD>
+<TD ALIGN=RIGHT>RCL CENT</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>ROBERTO CLEMENTE LEAGUE</TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>  RCL EAST</TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    BAY CITY Bombers</TD>
+<TD ALIGN=RIGHT>27</TD>
+<TD ALIGN=RIGHT>21</TD>
+<TD ALIGN=RIGHT> .563</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>L 2</TD>
+<TD ALIGN=RIGHT> 5- 5</TD>
+<TD ALIGN=RIGHT>14-13</TD>
+<TD ALIGN=RIGHT>13- 8</TD>
+<TD ALIGN=RIGHT> 6- 7</TD>
+<TD ALIGN=RIGHT> 4- 1</TD>
+<TD ALIGN=RIGHT>15- 9</TD>
+<TD ALIGN=RIGHT>12-12</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    KALAMAZOO Apples</TD>
+<TD ALIGN=RIGHT>25</TD>
+<TD ALIGN=RIGHT>23</TD>
+<TD ALIGN=RIGHT> .521</TD>
+<TD ALIGN=RIGHT>2.0</TD>
+<TD ALIGN=RIGHT>L 1</TD>
+<TD ALIGN=RIGHT> 5- 5</TD>
+<TD ALIGN=RIGHT> 9-15</TD>
+<TD ALIGN=RIGHT>16- 8</TD>
+<TD ALIGN=RIGHT>11- 7</TD>
+<TD ALIGN=RIGHT> 3- 2</TD>
+<TD ALIGN=RIGHT>12- 9</TD>
+<TD ALIGN=RIGHT>13-14</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    LITTLE COMPTON Little Giants</TD>
+<TD ALIGN=RIGHT>25</TD>
+<TD ALIGN=RIGHT>23</TD>
+<TD ALIGN=RIGHT> .521</TD>
+<TD ALIGN=RIGHT>2.0</TD>
+<TD ALIGN=RIGHT>W 1</TD>
+<TD ALIGN=RIGHT> 4- 6</TD>
+<TD ALIGN=RIGHT>14-10</TD>
+<TD ALIGN=RIGHT>11-13</TD>
+<TD ALIGN=RIGHT> 9-10</TD>
+<TD ALIGN=RIGHT> 3- 4</TD>
+<TD ALIGN=RIGHT> 9- 9</TD>
+<TD ALIGN=RIGHT>16-14</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    SEATTLE Rainiers</TD>
+<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT> .500</TD>
+<TD ALIGN=RIGHT>3.0</TD>
+<TD ALIGN=RIGHT>L 1</TD>
+<TD ALIGN=RIGHT> 5- 5</TD>
+<TD ALIGN=RIGHT>15-15</TD>
+<TD ALIGN=RIGHT> 9- 9</TD>
+<TD ALIGN=RIGHT> 8- 5</TD>
+<TD ALIGN=RIGHT> 2- 3</TD>
+<TD ALIGN=RIGHT> 7-11</TD>
+<TD ALIGN=RIGHT>17-13</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    VERMONT Woodchucks</TD>
+<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT> .500</TD>
+<TD ALIGN=RIGHT>3.0</TD>
+<TD ALIGN=RIGHT>W 4</TD>
+<TD ALIGN=RIGHT> 6- 4</TD>
+<TD ALIGN=RIGHT> 9-15</TD>
+<TD ALIGN=RIGHT>15- 9</TD>
+<TD ALIGN=RIGHT> 4- 9</TD>
+<TD ALIGN=RIGHT> 4- 2</TD>
+<TD ALIGN=RIGHT>12- 9</TD>
+<TD ALIGN=RIGHT>12-15</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    DAMASCUS Reapers</TD>
+<TD ALIGN=RIGHT>14</TD>
+<TD ALIGN=RIGHT>34</TD>
+<TD ALIGN=RIGHT> .292</TD>
+<TD ALIGN=RIGHT>13.0</TD>
+<TD ALIGN=RIGHT>L 3</TD>
+<TD ALIGN=RIGHT> 3- 7</TD>
+<TD ALIGN=RIGHT> 4-20</TD>
+<TD ALIGN=RIGHT>10-14</TD>
+<TD ALIGN=RIGHT> 6- 6</TD>
+<TD ALIGN=RIGHT> 4- 3</TD>
+<TD ALIGN=RIGHT> 5-13</TD>
+<TD ALIGN=RIGHT> 9-21</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>  RCL CENTRAL</TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    FRESNO Blaze</TD>
+<TD ALIGN=RIGHT>32</TD>
+<TD ALIGN=RIGHT>16</TD>
+<TD ALIGN=RIGHT> .667</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>W 1</TD>
+<TD ALIGN=RIGHT> 6- 4</TD>
+<TD ALIGN=RIGHT>16-11</TD>
+<TD ALIGN=RIGHT>16- 5</TD>
+<TD ALIGN=RIGHT> 7- 7</TD>
+<TD ALIGN=RIGHT> 1- 1</TD>
+<TD ALIGN=RIGHT>16-11</TD>
+<TD ALIGN=RIGHT>16- 5</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    LAS VEGAS Eclipse</TD>
+<TD ALIGN=RIGHT>27</TD>
+<TD ALIGN=RIGHT>21</TD>
+<TD ALIGN=RIGHT> .563</TD>
+<TD ALIGN=RIGHT>5.0</TD>
+<TD ALIGN=RIGHT>W 2</TD>
+<TD ALIGN=RIGHT> 6- 4</TD>
+<TD ALIGN=RIGHT>13-11</TD>
+<TD ALIGN=RIGHT>14-10</TD>
+<TD ALIGN=RIGHT> 5- 6</TD>
+<TD ALIGN=RIGHT> 2- 2</TD>
+<TD ALIGN=RIGHT>19-11</TD>
+<TD ALIGN=RIGHT> 8-10</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    PEND OREILLE Wampus Cats</TD>
+<TD ALIGN=RIGHT>27</TD>
+<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT> .529</TD>
+<TD ALIGN=RIGHT>6.5</TD>
+<TD ALIGN=RIGHT>L 2</TD>
+<TD ALIGN=RIGHT> 5- 5</TD>
+<TD ALIGN=RIGHT> 9-12</TD>
+<TD ALIGN=RIGHT>18-12</TD>
+<TD ALIGN=RIGHT> 7-12</TD>
+<TD ALIGN=RIGHT> 2- 3</TD>
+<TD ALIGN=RIGHT>13-11</TD>
+<TD ALIGN=RIGHT>14-13</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    FOO Fighters</TD>
+<TD ALIGN=RIGHT>23</TD>
+<TD ALIGN=RIGHT>25</TD>
+<TD ALIGN=RIGHT> .479</TD>
+<TD ALIGN=RIGHT>9.0</TD>
+<TD ALIGN=RIGHT>L 1</TD>
+<TD ALIGN=RIGHT> 6- 4</TD>
+<TD ALIGN=RIGHT> 9-12</TD>
+<TD ALIGN=RIGHT>14-13</TD>
+<TD ALIGN=RIGHT> 8- 6</TD>
+<TD ALIGN=RIGHT> 1- 2</TD>
+<TD ALIGN=RIGHT>14-13</TD>
+<TD ALIGN=RIGHT> 9-12</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    SAN ANTONIO Roughriders</TD>
+<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT>27</TD>
+<TD ALIGN=RIGHT> .471</TD>
+<TD ALIGN=RIGHT>9.5</TD>
+<TD ALIGN=RIGHT>W 2</TD>
+<TD ALIGN=RIGHT> 7- 3</TD>
+<TD ALIGN=RIGHT> 7-14</TD>
+<TD ALIGN=RIGHT>17-13</TD>
+<TD ALIGN=RIGHT> 9- 4</TD>
+<TD ALIGN=RIGHT> 3- 2</TD>
+<TD ALIGN=RIGHT>14-16</TD>
+<TD ALIGN=RIGHT>10-11</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    WEST MIFFLIN Wildcats</TD>
+<TD ALIGN=RIGHT>19</TD>
+<TD ALIGN=RIGHT>29</TD>
+<TD ALIGN=RIGHT> .396</TD>
+<TD ALIGN=RIGHT>13.0</TD>
+<TD ALIGN=RIGHT>L 3</TD>
+<TD ALIGN=RIGHT> 3- 7</TD>
+<TD ALIGN=RIGHT> 8-16</TD>
+<TD ALIGN=RIGHT>11-13</TD>
+<TD ALIGN=RIGHT> 5- 6</TD>
+<TD ALIGN=RIGHT> 0- 4</TD>
+<TD ALIGN=RIGHT>13-17</TD>
+<TD ALIGN=RIGHT> 6-12</TD>
+</TR>
+</TABLE>
+<TABLE CELLSPACING=2 CELLPADDING=2>
+<TR>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=RIGHT>W</TD>
+<TD ALIGN=RIGHT>L</TD>
+<TD ALIGN=RIGHT>PCT</TD>
+<TD ALIGN=RIGHT>GB</TD>
+<TD ALIGN=RIGHT>STRK</TD>
+<TD ALIGN=RIGHT>Last 10</TD>
+<TD ALIGN=RIGHT>Home</TD>
+<TD ALIGN=RIGHT>Away</TD>
+<TD ALIGN=RIGHT>1 Run</TD>
+<TD ALIGN=RIGHT>X-Inn</TD>
+<TD ALIGN=RIGHT>WSL SOUT</TD>
+<TD ALIGN=RIGHT>WSL WEST</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>WILLIE STARGELL LEAGUE</TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>  WSL SOUTH</TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    TAMPA BAY Pipers</TD>
+<TD ALIGN=RIGHT>31</TD>
+<TD ALIGN=RIGHT>17</TD>
+<TD ALIGN=RIGHT> .646</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>W 6</TD>
+<TD ALIGN=RIGHT> 9- 1</TD>
+<TD ALIGN=RIGHT>12- 6</TD>
+<TD ALIGN=RIGHT>19-11</TD>
+<TD ALIGN=RIGHT> 7- 7</TD>
+<TD ALIGN=RIGHT> 4- 4</TD>
+<TD ALIGN=RIGHT>12- 6</TD>
+<TD ALIGN=RIGHT>19-11</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    ANTELOPE River Cats</TD>
+<TD ALIGN=RIGHT>27</TD>
+<TD ALIGN=RIGHT>21</TD>
+<TD ALIGN=RIGHT> .563</TD>
+<TD ALIGN=RIGHT>4.0</TD>
+<TD ALIGN=RIGHT>L 1</TD>
+<TD ALIGN=RIGHT> 5- 5</TD>
+<TD ALIGN=RIGHT>12- 9</TD>
+<TD ALIGN=RIGHT>15-12</TD>
+<TD ALIGN=RIGHT>10- 2</TD>
+<TD ALIGN=RIGHT> 2- 1</TD>
+<TD ALIGN=RIGHT>15- 9</TD>
+<TD ALIGN=RIGHT>12-12</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    SAN DIEGO Dolphins</TD>
+<TD ALIGN=RIGHT>26</TD>
+<TD ALIGN=RIGHT>22</TD>
+<TD ALIGN=RIGHT> .542</TD>
+<TD ALIGN=RIGHT>5.0</TD>
+<TD ALIGN=RIGHT>W 1</TD>
+<TD ALIGN=RIGHT> 6- 4</TD>
+<TD ALIGN=RIGHT>14-10</TD>
+<TD ALIGN=RIGHT>12-12</TD>
+<TD ALIGN=RIGHT> 8- 4</TD>
+<TD ALIGN=RIGHT> 1- 5</TD>
+<TD ALIGN=RIGHT>12- 9</TD>
+<TD ALIGN=RIGHT>14-13</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    WILEY Coyotes</TD>
+<TD ALIGN=RIGHT>22</TD>
+<TD ALIGN=RIGHT>26</TD>
+<TD ALIGN=RIGHT> .458</TD>
+<TD ALIGN=RIGHT>9.0</TD>
+<TD ALIGN=RIGHT>W 1</TD>
+<TD ALIGN=RIGHT> 7- 3</TD>
+<TD ALIGN=RIGHT> 9-15</TD>
+<TD ALIGN=RIGHT>13-11</TD>
+<TD ALIGN=RIGHT> 6- 7</TD>
+<TD ALIGN=RIGHT> 4- 1</TD>
+<TD ALIGN=RIGHT>12- 9</TD>
+<TD ALIGN=RIGHT>10-17</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    MISSOURI Royals</TD>
+<TD ALIGN=RIGHT>15</TD>
+<TD ALIGN=RIGHT>33</TD>
+<TD ALIGN=RIGHT> .313</TD>
+<TD ALIGN=RIGHT>16.0</TD>
+<TD ALIGN=RIGHT>L 1</TD>
+<TD ALIGN=RIGHT> 3- 7</TD>
+<TD ALIGN=RIGHT> 6-18</TD>
+<TD ALIGN=RIGHT> 9-15</TD>
+<TD ALIGN=RIGHT> 3-10</TD>
+<TD ALIGN=RIGHT> 2- 2</TD>
+<TD ALIGN=RIGHT>10-14</TD>
+<TD ALIGN=RIGHT> 5-19</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    PATCH Panthers</TD>
+<TD ALIGN=RIGHT>13</TD>
+<TD ALIGN=RIGHT>35</TD>
+<TD ALIGN=RIGHT> .271</TD>
+<TD ALIGN=RIGHT>18.0</TD>
+<TD ALIGN=RIGHT>W 2</TD>
+<TD ALIGN=RIGHT> 3- 7</TD>
+<TD ALIGN=RIGHT> 6-18</TD>
+<TD ALIGN=RIGHT> 7-17</TD>
+<TD ALIGN=RIGHT> 3- 8</TD>
+<TD ALIGN=RIGHT> 2- 1</TD>
+<TD ALIGN=RIGHT> 5-19</TD>
+<TD ALIGN=RIGHT> 8-16</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>  WSL WEST</TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    WESTCHESTER Cathedrals</TD>
+<TD ALIGN=RIGHT>30</TD>
+<TD ALIGN=RIGHT>18</TD>
+<TD ALIGN=RIGHT> .625</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>L 1</TD>
+<TD ALIGN=RIGHT> 3- 7</TD>
+<TD ALIGN=RIGHT>19- 8</TD>
+<TD ALIGN=RIGHT>11-10</TD>
+<TD ALIGN=RIGHT> 8- 4</TD>
+<TD ALIGN=RIGHT> 4- 3</TD>
+<TD ALIGN=RIGHT>15- 9</TD>
+<TD ALIGN=RIGHT>15- 9</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    MIDDLETOWN Legg Hounds</TD>
+<TD ALIGN=RIGHT>28</TD>
+<TD ALIGN=RIGHT>20</TD>
+<TD ALIGN=RIGHT> .583</TD>
+<TD ALIGN=RIGHT>2.0</TD>
+<TD ALIGN=RIGHT>L 2</TD>
+<TD ALIGN=RIGHT> 5- 5</TD>
+<TD ALIGN=RIGHT>15-12</TD>
+<TD ALIGN=RIGHT>13- 8</TD>
+<TD ALIGN=RIGHT> 6-10</TD>
+<TD ALIGN=RIGHT> 1- 3</TD>
+<TD ALIGN=RIGHT>17-10</TD>
+<TD ALIGN=RIGHT>11-10</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    ROSEMERE Flying Brewers</TD>
+<TD ALIGN=RIGHT>27</TD>
+<TD ALIGN=RIGHT>21</TD>
+<TD ALIGN=RIGHT> .563</TD>
+<TD ALIGN=RIGHT>3.0</TD>
+<TD ALIGN=RIGHT>W 1</TD>
+<TD ALIGN=RIGHT> 6- 4</TD>
+<TD ALIGN=RIGHT>14-10</TD>
+<TD ALIGN=RIGHT>13-11</TD>
+<TD ALIGN=RIGHT> 5-10</TD>
+<TD ALIGN=RIGHT> 1- 6</TD>
+<TD ALIGN=RIGHT>15-12</TD>
+<TD ALIGN=RIGHT>12- 9</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    VALLEY Firebirds</TD>
+<TD ALIGN=RIGHT>26</TD>
+<TD ALIGN=RIGHT>22</TD>
+<TD ALIGN=RIGHT> .542</TD>
+<TD ALIGN=RIGHT>4.0</TD>
+<TD ALIGN=RIGHT>L 3</TD>
+<TD ALIGN=RIGHT> 6- 4</TD>
+<TD ALIGN=RIGHT>11-10</TD>
+<TD ALIGN=RIGHT>15-12</TD>
+<TD ALIGN=RIGHT> 8- 6</TD>
+<TD ALIGN=RIGHT> 3- 2</TD>
+<TD ALIGN=RIGHT>16-11</TD>
+<TD ALIGN=RIGHT>10-11</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    WASHUTA Lokies</TD>
+<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT> .500</TD>
+<TD ALIGN=RIGHT>6.0</TD>
+<TD ALIGN=RIGHT>L 2</TD>
+<TD ALIGN=RIGHT> 3- 7</TD>
+<TD ALIGN=RIGHT>14-10</TD>
+<TD ALIGN=RIGHT>10-14</TD>
+<TD ALIGN=RIGHT> 8- 5</TD>
+<TD ALIGN=RIGHT> 6- 2</TD>
+<TD ALIGN=RIGHT>16-11</TD>
+<TD ALIGN=RIGHT> 8-13</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>    SPRINGFIELD Schnauzers</TD>
+<TD ALIGN=RIGHT>19</TD>
+<TD ALIGN=RIGHT>29</TD>
+<TD ALIGN=RIGHT> .396</TD>
+<TD ALIGN=RIGHT>11.0</TD>
+<TD ALIGN=RIGHT>W 2</TD>
+<TD ALIGN=RIGHT> 4- 6</TD>
+<TD ALIGN=RIGHT>10-20</TD>
+<TD ALIGN=RIGHT> 9- 9</TD>
+<TD ALIGN=RIGHT> 7- 6</TD>
+<TD ALIGN=RIGHT> 2- 2</TD>
+<TD ALIGN=RIGHT> 9-15</TD>
+<TD ALIGN=RIGHT>10-14</TD>
+</TR>
+</TABLE>
+</BODY>
+</HTML>
+ 
 
   </body>
 </html>
