--- a/2023teamstats.html
+++ b/2023teamstats.html
@@ -48,7 +48,7 @@
 <TD ALIGN=RIGHT>RCL CENT</TD>
 </TR>
 <TR>
-<TD ALIGN=LEFT>ROBERTO CLEMENTE LEAGUE</TD>
+                                           <TD ALIGN=LEFT> <strong><em><u> ROBERTO CLEMENTE LEAGUE </strong></em></u></TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
@@ -63,7 +63,7 @@
 <TD ALIGN=LEFT> </TD>
 </TR>
 <TR>
-<TD ALIGN=LEFT>  RCL EAST</TD>
+                                           <TD ALIGN=LEFT> <strong>  RCL EAST </strong></TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
@@ -168,7 +168,7 @@
 <TD ALIGN=RIGHT> 9-21</TD>
 </TR>
 <TR>
-<TD ALIGN=LEFT>  RCL CENTRAL</TD>
+                                           <TD ALIGN=LEFT> <strong> RCL CENTRAL </strong> </TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
@@ -305,7 +305,7 @@
 <TD ALIGN=RIGHT>WSL WEST</TD>
 </TR>
 <TR>
-<TD ALIGN=LEFT>WILLIE STARGELL LEAGUE</TD>
+                                           <TD ALIGN=LEFT><strong><em><u> WILLIE STARGELL LEAGUE</strong></em></u></TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
@@ -320,7 +320,7 @@
 <TD ALIGN=LEFT> </TD>
 </TR>
 <TR>
-<TD ALIGN=LEFT>  WSL SOUTH</TD>
+                                           <TD ALIGN=LEFT> <strong> WSL SOUTH </strong></TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
@@ -425,7 +425,7 @@
 <TD ALIGN=RIGHT> 8-16</TD>
 </TR>
 <TR>
-<TD ALIGN=LEFT>  WSL WEST</TD>
+                                           <TD ALIGN=LEFT> <strong> WSL WEST</strong></TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
