--- a/2023teamstats.html
+++ b/2023teamstats.html
@@ -46,8 +46,7 @@
 <TD ALIGN=RIGHT>X-Inn</TD>
 <TD ALIGN=RIGHT>RCL EAST</TD>
 <TD ALIGN=RIGHT>RCL CENT</TD>
-</TR>
-<TR>
+
                                            <TD ALIGN=LEFT> <strong><em><u> ROBERTO CLEMENTE LEAGUE </strong></em></u></TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
@@ -61,7 +60,8 @@
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
 <TD ALIGN=LEFT> </TD>
-
+</TR>
+<TR>
                                            
                                            <TD ALIGN=LEFT> <strong>  RCL EAST </strong></TD>
 <TD ALIGN=LEFT> </TD>
@@ -212,8 +212,8 @@
 <TD ALIGN=RIGHT>19-11</TD>
 <TD ALIGN=RIGHT> 8-10</TD>
 </TR>
-<TR> <em><u>
-<TD ALIGN=LEFT>    PEND OREILLE Wampus Cats</TD>
+<TR> 
+<TD ALIGN=LEFT> <em><u>   PEND OREILLE Wampus Cats</TD>
 <TD ALIGN=RIGHT>27</TD>
 <TD ALIGN=RIGHT>24</TD>
 <TD ALIGN=RIGHT> .529</TD>
@@ -225,8 +225,8 @@
 <TD ALIGN=RIGHT> 7-12</TD>
 <TD ALIGN=RIGHT> 2- 3</TD>
 <TD ALIGN=RIGHT>13-11</TD>
-<TD ALIGN=RIGHT>14-13</TD>
-                                           </em></u></TR>
+<TD ALIGN=RIGHT>14-13 </em></u></TD>
+                                           </TR>
 <TR>
 <TD ALIGN=LEFT>    FOO Fighters</TD>
 <TD ALIGN=RIGHT>23</TD>
