--- a/2023teamstats.html
+++ b/2023teamstats.html
@@ -1582,7 +1582,7 @@
                                            <br>
                                            <br>
                                            <br>
-                                              <h1><strong> Relief Pitchers </strong> </h1>   
+                                              <h1><strong> Relief Pitching </strong> </h1>   
 
                                            
                    
