--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -26,6 +26,11 @@
   <table>
 
    <tr>
+      <td><em>6/12/2023</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>3B Justin Turner</strong> to the <u>Middletown Legg Hounds</u> in exchange for <strong>P Trevor Rogers </strong></td>
+    </tr>   
+                                         
+   <tr>
       <td><em>6/2/2023</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>OF Hunter Renfroe</strong>, <strong>C Garrett Stubbs</strong> and <strong>P Wily Peralta</strong> to the <u>Tampa Bay Pipers</u> in exchange for <strong>P Bryce Elder </strong>, <strong>C Joey Bart</strong>, and
         <strong>OF Ben Gamel</strong>. </td>
