--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -27,12 +27,12 @@
 
    <tr>
       <td><em>6/12/2023</em></td>
-      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Adam Ottavino</strong> to the <u>Middletown Legg Hounds</u> in exchange for <strong>P Diego Castillo </strong> and a <em> 4th round pick </em? in the 2024 TRABL draft.</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Adam Ottavino</strong> to the <u>Middletown Legg Hounds</u> in exchange for <strong>P Diego Castillo </strong> and a <strong> 2024 4th round pick. </strong> </td>
     </tr>  
     
    <tr>
       <td><em>6/12/2023</em></td>
-      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>3B Justin Turner</strong> to the <u>Middletown Legg Hounds</u> in exchange for <strong>P Trevor Rogers </strong></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>3B Justin Turner</strong> to the <u>Middletown Legg Hounds</u> in exchange for <strong>P Trevor Rogers. </strong></td>
     </tr>   
                                          
    <tr>
