--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -26,6 +26,11 @@
   <table>
 
   <tr>
+      <td><em>11/19/2023</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Alex Cobb</strong> to the <u>Fresno Blaze</u> in exchange for <strong>P Carlos Rodon</strong> and the <strong>Fresno Blaze 5th round draft pick</strong>. </td>
+    </tr>  
+    
+  <tr>
       <td><em>6/29/2023</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>2B Trevor Story</strong> to the <u>Kalamazoo Apples</u> in exchange for <strong>2B Brendan Rodgers </strong>. </td>
     </tr>  
