--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ width="250"
 </center></em></h5>
 <br>
 <hr>
-<a href="2022teambattingstats.html"> <h2>2022 Player Batting Stats</h2> </a>
+<a href="2023teambattingstats.html"> <h2>2023 Player Batting Stats</h2> </a>
 <br>
-<a href="2022teampitchingstats.html"> <h2>2022 Player Pitching Stats</h2> </a>
+<a href="2023teampitchingstats.html"> <h2>2023 Player Pitching Stats</h2> </a>
 <br>
 <a href="2023teamstats.html"> <h2>2023 Player Stats</h2> </a>
 <br>
@@ -31,7 +31,7 @@ width="250"
 
 <br><br><br><br>
 <h3>Contact Jared Horton</h3>
-<h3>email:<a href="jhorton@reallifenewport.com"> jhorton@reallifenwport.com </a></h3>
+<h3>email:<a href="p.o.wampuscats@gmail.com"> p.o.wampuscats@gmail.com </a></h3>
 
 
   </body>
