--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -99,9 +99,12 @@
   <br>
   <br>
 
-  <h1><strong>2023 TRABL Draft</strong></h1>
+  <h1><strong>Draft Results</strong></h1>
   <hr>
   <table>
+    <tr> 
+      <td><h3><strong>2023 Draft</strong></h3></td>
+      <tr/>
     <tr>
       <td><strong>Round</strong></td>
       <td><strong>Postion</strong> </td>
