--- a/2023teampitchingstats.html
+++ b/2023teampitchingstats.html
@@ -403,17 +403,14 @@
           </table>
           <br>
 
-   
-          <h3><strong>Zach Plesac</strong></h3>
+      <h3><strong>Zach Plesac</strong></h3>
 
+    <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/5/575fef01_mlbam.jpg" alt=""></td>
+      <td>
 
-          <table>
-          <tr>
-            <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/5/575fef01_mlbam.jpg" alt=""></td>
-            <td>
-
-
-        <div class="sr_share_wrap" style="overflow:auto">
+<div class="sr_share_wrap" style="overflow:auto">
 <table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
     <caption>Standard Pitching</caption>
    <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
@@ -460,8 +457,12 @@
 </tbody><tfoot>
    </tfoot>
 </table><div id="credit_pitching_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/p/plesaza01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#pitching_standard">View Original Table</a><br>Generated 11/24/2023.</div>
-     
-       
+
+    </td>
+    </tr>
+    </table>
+    <br>
+
 
           <h3><strong>Spenser Watkins</strong></h3>
 
