--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -101,6 +101,26 @@
 
   <h1><strong>Draft Results</strong></h1>
   <hr>
+<br>
+  <table>
+    <tr> 
+      <td><h3><strong>2023 Draft</strong></h3></td>
+      <tr/>
+    <tr>
+      <td><strong>Round</strong></td>
+      <td><strong>Postion</strong> </td>
+      <td><strong>Name</strong> </td>
+    </tr>
+
+    <tr>
+      <td>1</td>
+      <td>3B</td>
+      <td>Junior Caminero</td>
+    </tr>
+
+<br>
+  
+  
   <table>
     <tr> 
       <td><h3><strong>2023 Draft</strong></h3></td>
