--- a/2023teambattingstats.html
+++ b/2023teambattingstats.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>2023 Team Batting Stats</title>
+     <link rel="icon" type="image/x-icon" href="Pend Oreille Wampus Cats.jpg">
   </head>
   <body style=backgroundcolor: #FFFBE9;">
 
