--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -120,6 +120,12 @@
       <td>Junior Caminero</td>
     </tr>
 
+     <tr>
+      <td>2</td>
+      <td>OF</td>
+      <td>Luis Matos</td>
+    </tr>
+    
 <br>
   
   
