--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -125,6 +125,12 @@
       <td>OF</td>
       <td>Luis Matos</td>
     </tr>
+
+  <tr>
+      <td>3</td>
+      <td>P</td>
+      <td>Orion Kerkering</td>
+    </tr>
     
 <br>
   
