--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -131,6 +131,12 @@
       <td>P</td>
       <td>Orion Kerkering</td>
     </tr>
+
+ <tr>
+      <td>4</td>
+      <td>3B</td>
+      <td>Michael Busch</td>
+    </tr>
     
 <br>
   
