--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -137,7 +137,12 @@
       <td>3B</td>
       <td>Michael Busch</td>
     </tr>
-    
+
+ <tr>
+      <td>5</td>
+      <td>P</td>
+      <td>Luis Medina</td>
+    </tr>
 <br>
   
   
