--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -145,7 +145,14 @@
     </tr>
 <br>
   
-  
+ <tr>
+      <td>5</td>
+      <td>P</td>
+    <td>Quinn Priester</td>
+    </tr>
+<br>
+
+    
   <table>
     <tr> 
       <td><h3><strong>2023 Draft</strong></h3></td>
