--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -152,6 +152,13 @@
     </tr>
 <br>
 
+ <tr>
+      <td>6</td>
+      <td>OF</td>
+    <td>Wade Meckler</td>
+    </tr>
+<br>
+    
     
   <table>
     <tr> 
